Bug 964217 - search item is broken in Australis' customize code, r=mikedeboer
UltraBlame original commit: 849724d4081e38dbf64621b3b8f51aeb549a2168

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -1072,6 +1072,39 @@ none
 ;
 }
 #
+wrapper
+-
+personal
+-
+bookmarks
+:
+not
+(
+[
+place
+=
+"
+toolbar
+"
+]
+)
+>
+#
+personal
+-
+bookmarks
+{
+-
+moz
+-
+box
+-
+pack
+:
+center
+;
+}
+#
 customization
 -
 palette
